<resources>
    <string name="com.crashlytics.android.build_id">8291b84c-edc1-4b72-bbfe-5e4014fb9a38</string>
    <string name="Yik_Yak">Yik Yak</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_widget">Add widget</string>
    <string name="already_reported_message">You have already reported this message.</string>
    <string name="already_reported_title">Oops!</string>
    <string name="amplitude_dev">c10172e4b15842ba235eb469e1d1968b</string>
    <string name="amplitude_identity_url">https://api.amplitude.com/identify</string>
    <string name="amplitude_prod">29e57d2b77abf99a6c510221e04a2639</string>
    <string name="analytics_action_ApplicationDidBecomeActive">ApplicationDidBecomeActive</string>
    <string name="analytics_action_ApplicationDidBecomeActive_Direct">Direct</string>
    <string name="analytics_action_ApplicationDidBecomeActive_PushNotification">PushNotification</string>
    <string name="analytics_action_ApplicationDidEnterBackground">ApplicationDidEnterBackground</string>
    <string name="analytics_action_ApplicationDidLaunchFromRemoteNotification">ApplicationDidLaunchFromRemoteNotification</string>
    <string name="analytics_action_BasecampNotEnabled">BasecampNotEnabled</string>
    <string name="analytics_action_CertificateNotPinned">CertificateNotPinned</string>
    <string name="analytics_action_CertificatePinned">CertificatePinned</string>
    <string name="analytics_action_CloseTutorial">CloseTutorial</string>
    <string name="analytics_action_ContactUs">ContactUs</string>
    <string name="analytics_action_DeleteYak">DeleteYak</string>
    <string name="analytics_action_DeviceRegistered">DeviceRegistered</string>
    <string name="analytics_action_DidAgreeToPrivacyPolicyChange">DidAgreeToPrivacyPolicyChange</string>
    <string name="analytics_action_DidAttemptToRate">DidAttemptToRate</string>
    <string name="analytics_action_DidDeclineToRate">DidDeclineToRate</string>
    <string name="analytics_action_DidPrompt">DidPrompt</string>
    <string name="analytics_action_DidRequestReminderToRate">DidRequestReminderToRate</string>
    <string name="analytics_action_DidViewPrivacyPolicyChange">DidViewPrivacyPolicyChange</string>
    <string name="analytics_action_DisableBasecamp">DisableBasecamp</string>
    <string name="analytics_action_DraftDeleted">DraftDeleted</string>
    <string name="analytics_action_DraftSaved">DraftSave</string>
    <string name="analytics_action_DraftSent">DraftSent</string>
    <string name="analytics_action_FindYourHerd">FindYourHerdTapped</string>
    <string name="analytics_action_FollowUsOnFacebook">FollowUsOnFacebook</string>
    <string name="analytics_action_FollowUsOnInstagram">FollowUsOnInstagram</string>
    <string name="analytics_action_FollowUsOnTwitter">FollowUsOnTwitter</string>
    <string name="analytics_action_HotYaks">RateYikYak</string>
    <string name="analytics_action_LocationTab">LocationTab</string>
    <string name="analytics_action_NotificationsDisabled">pushNotificationsDisabled</string>
    <string name="analytics_action_NotificationsEnabled">pushNotificationsEnabled</string>
    <string name="analytics_action_OtherTopYaks">OtherTopYaks</string>
    <string name="analytics_action_PeekIntoLocationButtonTap">PeekIntoLocationButtonTap</string>
    <string name="analytics_action_PrivacyPolicy">PrivacyPolicy</string>
    <string name="analytics_action_PullToRefresh">PullToRefresh</string>
    <string name="analytics_action_RateYikYak">RateYikYak</string>
    <string name="analytics_action_ReplyToYak">ReplyToYak</string>
    <string name="analytics_action_Report">Report</string>
    <string name="analytics_action_RulesAndInfo">RulesAndInfo</string>
    <string name="analytics_action_SavePeekLocation">SavePeekLocation</string>
    <string name="analytics_action_SavePeekLocationViaSwipe">SavePeekLocationViaSwipe</string>
    <string name="analytics_action_ScreenshotFromFeed">ScreenshotFromFeed</string>
    <string name="analytics_action_ScreenshotYak">ScreenshotYak</string>
    <string name="analytics_action_SearchForPeekLocation">SearchForPeekLocation</string>
    <string name="analytics_action_SearchForPeekLocationButtonTap">SearchForPeekLocationButtonTap</string>
    <string name="analytics_action_SendingYak">SendingYak</string>
    <string name="analytics_action_SetBasecamp">SetBasecamp</string>
    <string name="analytics_action_ShareYak">ShareYak</string>
    <string name="analytics_action_ShareYikYak">Share Yik Yak</string>
    <string name="analytics_action_StartedYak">StartedYak</string>
    <string name="analytics_action_SwipeOnCell">SwipeOnCell</string>
    <string name="analytics_action_TabBarTap">TabBarSectionTap</string>
    <string name="analytics_action_TappedLink">TappedLink</string>
    <string name="analytics_action_TermsOfService">TermsOfService</string>
    <string name="analytics_action_TopYaksInMyArea">TopYaksInMyArea</string>
    <string name="analytics_action_VerificationBack">VerificationBack</string>
    <string name="analytics_action_VerificationCancel">VerificationCancel</string>
    <string name="analytics_action_VerificationCompleted">VerificationCompleted</string>
    <string name="analytics_action_VerificationError">VerificationError</string>
    <string name="analytics_action_VerificationInitiated">VerificationInitiated</string>
    <string name="analytics_action_VerificationNext">VerificationNext</string>
    <string name="analytics_action_VerificationResend">VerificationResend</string>
    <string name="analytics_action_VerificationSubmitCode">VerificationSubmitCode</string>
    <string name="analytics_action_VerificationSuccess">VerificationSuccess</string>
    <string name="analytics_action_ViewLink">ViewedVideo</string>
    <string name="analytics_action_ViewMyReplies">ViewMyReplies</string>
    <string name="analytics_action_ViewMyTopYaks">ViewMyTopYaks</string>
    <string name="analytics_action_ViewMyYaks">ViewMyYaks</string>
    <string name="analytics_action_ViewPeekLocation">ViewPeekLocation</string>
    <string name="analytics_action_ViewPhoto">ViewedPhoto</string>
    <string name="analytics_action_ViewYakDetail">ViewYakDetail</string>
    <string name="analytics_action_ViewYakarma">ViewYakarma</string>
    <string name="analytics_action_Vote">Vote</string>
    <string name="analytics_action_WarningShown">WarningShown</string>
    <string name="analytics_action_YaksSegmentTapped">YaksSegmentTapped</string>
    <string name="analytics_category_Application">Application</string>
    <string name="analytics_category_Basecamp">Basecamp</string>
    <string name="analytics_category_ContactUs">ContactUs</string>
    <string name="analytics_category_Feed">Feed</string>
    <string name="analytics_category_Links">Links</string>
    <string name="analytics_category_Locations">Locations</string>
    <string name="analytics_category_More">More</string>
    <string name="analytics_category_Notification">Basecamp</string>
    <string name="analytics_category_RatingsPrompt">RatingsPrompt</string>
    <string name="analytics_category_Registration">Registration</string>
    <string name="analytics_category_Screenshot">Screenshot</string>
    <string name="analytics_category_Share">Share</string>
    <string name="analytics_category_SwipeOnCell">SwipeOnCell</string>
    <string name="analytics_category_TabBar">TabBar</string>
    <string name="analytics_category_Tutorial">Tutorial</string>
    <string name="analytics_category_Verification">Verification</string>
    <string name="analytics_category_View">View</string>
    <string name="analytics_category_Voting">Voting</string>
    <string name="analytics_category_WarningShown">WarningShown</string>
    <string name="analytics_category_Yak">Yak</string>
    <string name="analytics_category_YaksSegmentTapped">YaksSegmentTapped</string>
    <string name="app_name">Yik Yak</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="basecamp_category">My Herd location is wrong.</string>
    <string name="comment_body">How much yak could a yik yak yak if a yik yak could yak yak. How much yak could a yik yak yak if a yik yak could yak yak.</string>
    <string name="comment_handle">Handle</string>
    <string name="comment_reply_count">0 REPLIES</string>
    <string name="comment_share_label">SHARE</string>
    <string name="comment_time_posted">3d ago</string>
    <string name="no">No</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="select_a_country">Select A Country</string>
    <string name="settings_account_btn_load">Load</string>
    <string name="settings_account_btn_save">Save</string>
    <string name="settings_account_description">Use this to save your account in case you need to reset your device or you wish to transfer the account to a new device.</string>
    <string name="settings_account_label">Account</string>
    <string name="settings_account_load">Load Account</string>
    <string name="settings_account_save">Save Account</string>
    <string name="settings_basecamp_header">My Herd</string>
    <string name="settings_basecamp_label">My Herd Enabled</string>
    <string name="settings_notifications_enable">Push Notifications</string>
    <string name="settings_notifications_header">Push Notifications</string>
    <string name="settings_notifications_show_unread_only">Show Unread Only</string>
    <string name="settings_notifications_sound">Notification Sound</string>
    <string name="settings_opt_out_header">Opt Out</string>
    <string name="settings_privacy_analytics">Opt Out of 3rd Party Analytics</string>
    <string name="settings_privacy_description">Protect Your Yaks</string>
    <string name="settings_privacy_header">Privacy</string>
    <string name="settings_privacy_pincode">Set a pin code to protect your Yaks and Replies on the Me screen so only you can view them. Toggle the switch off then on to reset the pin code.</string>
    <string name="settings_vote_double_tap">Double-tap to upvote</string>
    <string name="settings_vote_left">Left</string>
    <string name="settings_vote_right">Right</string>
    <string name="settings_voting">Voting</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="verification_info_message">"To guard against spam, we need to confirm you're a real person by verifying your phone number. We'll only ask for this once. Unless you're a robot..."</string>
    <string name="verification_title">"Don't worry! You can still remain anonymous to other users!"</string>
    <string name="yes">Yes</string>
</resources>