<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:background="@color/settingsbackground" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@color/settingsbackground" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="@dimen/simple_list_text_size_large" android:textColor="@color/settingsheadertext" android:id="@id/txtPrivacy" android:paddingLeft="5.0dip" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_privacy_header" />
        <RelativeLayout android:orientation="horizontal" android:background="@color/sendbackground" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="44.0dip">
            <TextView android:textSize="@dimen/simple_list_text_size" android:id="@id/txtProtectYourYaks" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_privacy_description" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <Switch android:textSize="@dimen/simple_list_text_size" android:id="@id/swProtectYourYaks" android:layout_width="wrap_content" android:layout_height="20.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <TextView android:textSize="@dimen/simple_list_text_size_small" android:textColor="@color/settingsfootertext" android:id="@id/txtPrivacyFooter" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_privacy_pincode" />
        <TextView android:textSize="@dimen/simple_list_text_size_large" android:textColor="@color/settingsheadertext" android:id="@id/txtBasecamp" android:paddingLeft="5.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_basecamp_header" />
        <RelativeLayout android:orientation="horizontal" android:id="@id/pnlBasecamp" android:background="@color/sendbackground" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="44.0dip">
            <TextView android:textSize="@dimen/simple_list_text_size" android:id="@id/txtBasecampLabel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_basecamp_label" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <Switch android:textSize="15.0sp" android:id="@id/swBasecamp" android:layout_width="wrap_content" android:layout_height="20.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <TextView android:textSize="@dimen/simple_list_text_size_large" android:textColor="@color/settingsheadertext" android:id="@id/txtVoting" android:paddingLeft="5.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_voting" />
        <RelativeLayout android:orientation="horizontal" android:id="@id/pnlVoteLeft" android:background="@color/sendbackground" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip">
            <TextView android:textSize="@dimen/simple_list_text_size" android:id="@id/txtVotingLeft" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_vote_left" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <ImageView android:id="@id/imgVotingLeft" android:layout_width="34.0dip" android:layout_height="34.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <RelativeLayout android:orientation="horizontal" android:id="@id/pnlVoteRight" android:background="@color/sendbackground" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip">
            <TextView android:textSize="@dimen/simple_list_text_size" android:id="@id/txtVotingRight" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_vote_right" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <ImageView android:id="@id/imgVotingRight" android:layout_width="34.0dip" android:layout_height="34.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <RelativeLayout android:orientation="horizontal" android:id="@id/pnlDoubleTapToVote" android:background="@color/sendbackground" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip">
            <TextView android:textSize="@dimen/simple_list_text_size" android:id="@id/txtDoubleTapToVote" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_vote_double_tap" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <Switch android:textSize="15.0sp" android:id="@id/swDoubleTapToVote" android:layout_width="wrap_content" android:layout_height="20.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <TextView android:textSize="@dimen/simple_list_text_size_large" android:textColor="@color/settingsheadertext" android:id="@id/lblNotifications" android:paddingLeft="5.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_notifications_header" />
        <RelativeLayout android:orientation="horizontal" android:id="@id/pnlPushNotifications" android:background="@color/sendbackground" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip">
            <TextView android:textSize="@dimen/simple_list_text_size" android:id="@id/txtPushNotifications" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_notifications_enable" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <Switch android:textSize="@dimen/simple_list_text_size" android:id="@id/swPushNotifications" android:layout_width="wrap_content" android:layout_height="20.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <RelativeLayout android:orientation="horizontal" android:id="@id/pnlAudibleNotifications" android:background="@color/sendbackground" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip">
            <TextView android:textSize="@dimen/simple_list_text_size" android:id="@id/txtAudibleNotifications" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_notifications_sound" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <Switch android:textSize="@dimen/simple_list_text_size" android:id="@id/swAudibleNotifications" android:layout_width="wrap_content" android:layout_height="20.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <RelativeLayout android:orientation="horizontal" android:id="@id/pnlNotifications" android:background="@color/sendbackground" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="44.0dip">
            <TextView android:textSize="@dimen/simple_list_text_size" android:id="@id/txtNotifications" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_notifications_show_unread_only" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <Switch android:textSize="@dimen/simple_list_text_size" android:id="@id/swNotifications" android:layout_width="wrap_content" android:layout_height="20.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <TextView android:textSize="@dimen/simple_list_text_size_large" android:textColor="@color/settingsheadertext" android:id="@id/lblSaveAccount" android:paddingLeft="5.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_account_label" />
        <EditText android:textColor="@android:color/black" android:id="@id/et_backup_test_value" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="Backup Test Value" />
        <RelativeLayout android:orientation="horizontal" android:id="@id/pnlSaveAccount" android:background="@color/sendbackground" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="44.0dip">
            <TextView android:textSize="@dimen/simple_list_text_size" android:id="@id/txtSaveAccount" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_account_save" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <Button android:textSize="@dimen/simple_list_text_size" android:id="@id/btnSaveAccount" android:layout_width="wrap_content" android:layout_height="32.0dip" android:text="@string/settings_account_btn_save" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <RelativeLayout android:orientation="horizontal" android:id="@id/pnlLoadAccount" android:background="@color/sendbackground" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="44.0dip">
            <TextView android:textSize="@dimen/simple_list_text_size" android:id="@id/txtLoadAccount" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_account_load" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <Button android:textSize="@dimen/simple_list_text_size" android:id="@id/btnLoadAccount" android:layout_width="wrap_content" android:layout_height="32.0dip" android:text="@string/settings_account_btn_load" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <TextView android:textSize="@dimen/simple_list_text_size_small" android:textColor="@color/settingsfootertext" android:id="@id/txtAccountFooter" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_account_description" />
        <TextView android:textSize="@dimen/simple_list_text_size_large" android:textColor="@color/settingsheadertext" android:id="@id/lblOPtOut" android:paddingLeft="5.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_opt_out_header" />
        <RelativeLayout android:orientation="horizontal" android:background="@color/sendbackground" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="44.0dip">
            <TextView android:textSize="@dimen/simple_list_text_size" android:id="@id/txtThirdPartyAnalytics" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_privacy_analytics" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <Switch android:textSize="@dimen/simple_list_text_size" android:id="@id/swThirdPartyAnalytics" android:layout_width="wrap_content" android:layout_height="20.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <TextView android:textSize="@dimen/simple_list_text_size_small" android:textColor="@color/settingsfootertext" android:layout_gravity="center_horizontal" android:id="@id/txtVersion" android:padding="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" />
        <TextView android:textSize="@dimen/simple_list_text_size_small" android:textColor="@color/settingsfootertext" android:layout_gravity="center_horizontal" android:id="@id/txtYakkerID" android:padding="3.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" />
        <TextView android:textSize="@dimen/simple_list_text_size_small" android:textColor="@color/settingsfootertext" android:layout_gravity="center_horizontal" android:id="@id/txtDeviceID" android:padding="3.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" />
    </LinearLayout>
</ScrollView>