<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.0sp" android:textColor="@color/yikyak_gray_dark" android:gravity="center" android:id="@id/tv_verification_message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/verification_info_message" />
    <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/green" android:gravity="center" android:id="@id/tv_verification_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/verification_title" android:layout_below="@id/tv_verification_message" />
    <Button android:id="@id/sp_country_spinner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="16.0dip" android:text="@string/select_a_country" android:layout_below="@id/tv_verification_title" android:onClick="showCountrySelect" />
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_fields" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_below="@id/sp_country_spinner" android:layout_centerHorizontal="true">
        <EditText android:gravity="center" android:id="@id/et_country_code" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="+#" android:singleLine="true" android:maxLength="4" android:layout_weight="1.0" android:inputType="phone" />
        <EditText android:gravity="center" android:id="@id/et_phone_number" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="Phone Number" android:singleLine="true" android:maxLength="13" android:layout_weight="0.3" android:inputType="phone" />
    </LinearLayout>
    <TextView android:textSize="14.0sp" android:textColor="@color/blue" android:id="@id/tv_privacy_policy" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:text="@string/privacy_policy" android:layout_below="@id/ll_fields" android:layout_alignParentLeft="true" />
    <TextView android:textSize="14.0sp" android:textColor="@color/blue" android:id="@id/tv_terms_of_service" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:text="@string/terms_of_service" android:layout_below="@id/ll_fields" android:layout_alignParentRight="true" />
</RelativeLayout>