<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/commentsMapContainer" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="3.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <fragment android:name="com.google.android.gms.maps.SupportMapFragment" android:layout_gravity="center" android:id="@id/commentsMap" android:tag="commentsMap" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="20.0dip" />
    <TextView android:id="@id/blurLayer" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:alpha="0.87" />
    <include android:id="@id/pnlVote" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" layout="@layout/view_vote" />
    <TextView android:textSize="16.0dip" android:textColor="@color/green" android:id="@id/handle" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/comment_handle" android:layout_alignParentLeft="true" />
    <TextView android:textSize="16.0dip" android:textColor="@color/gray3" android:id="@id/txtOriginalYak" android:paddingLeft="10.0dip" android:paddingTop="25.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/comment_body" android:layout_toLeftOf="@id/view_vote" android:layout_alignParentTop="false" />
    <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="2.0dip" android:layout_alignParentBottom="true">
        <ImageView android:id="@id/clock" android:focusable="false" android:layout_width="13.0dip" android:layout_height="13.0dip" android:layout_marginLeft="5.0dip" android:src="@drawable/clock_green" android:layout_centerVertical="true" />
        <TextView android:textSize="13.0dip" android:textColor="@color/green" android:id="@id/timePosted" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="@string/comment_time_posted" android:layout_centerVertical="true" />
        <TextView android:textSize="13.0dip" android:textColor="@color/green" android:id="@id/replies" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/comment_reply_count" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
        <TextView android:textSize="13.0dip" android:textColor="@color/blue" android:id="@id/txtShare" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/comment_share_label" android:drawableLeft="@drawable/share" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
</RelativeLayout>